# HardenedDataFramework

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  TODO.md  spec.md
.github/workflows/: ci.yml
docs/: crate-overview.md  selective-hardening.md  structured-data.md  validation-matrix.md
hdf-core/: Cargo.toml  README.md
hdf-core/examples/: composite_config.rs  dmr_safety_flag.rs  inline_store_basics.rs  read_report_branching.rs  recoverable_counter.rs  tmr_mode.rs
hdf-core/src/: cell.rs  ergonomic.rs  hardened.rs  lib.rs  report.rs  scheme.rs  store.rs
hdf-core/tests/: composite_types.rs  ergonomics.rs  public_api.rs
hdf-fault/: Cargo.toml  OVERHEAD.md  README.md
hdf-fault/examples/: fault_matrix.rs  overhead_report.rs  tmr_fault_injection.rs
hdf-fault/src/: error.rs  inject.rs  lib.rs  mutate.rs  scenario.rs
hdf-fault/tests/: direct_core.rs  matrix.rs  sync_wrapper.rs
hdf-journal/: Cargo.toml  README.md
hdf-journal/examples/: host_inspection.rs  recovery_trace.rs
hdf-journal/src/: decode.rs  event.rs  lib.rs  writer.rs
hdf-journal/tests/: journal.rs
hdf-layout/: Cargo.toml  README.md
hdf-layout/examples/: complemented_store.rs  split_store_basics.rs
hdf-layout/src/: lib.rs  placement.rs  (+2 more)
hdf-reference/: Cargo.toml  MEASUREMENTS.md  README.md
hdf-reference/examples/: footprint_report.rs  reference_demo.rs  visual_trace.rs
hdf-reference/src/: app.rs  critical.rs  lib.rs  model.rs  store.rs
hdf-reference/tests/: reference_flow.rs
hdf-storage/: Cargo.toml  README.md
hdf-sync/: Cargo.toml  README.md
(+21 files in other folders)
